# LYCET

./: LICENSE  README.md  pyproject.toml
docs/: documentation.ipynb  milestone1.ipynb  milestone2.ipynb  milestone2_progress.md
src/: __init__.py  demo.ipynb
src/LYCET_package/: DualNumber.py  ForwardMode.py  LYCET_Operations_Forward.py  LYCET_Operations_Reverse.py  Node.py  ReverseMode.py
tests/: .gitignore  check_coverage.sh  run_tests.sh  test_DualNumber.py  test_ForwardMode.py  test_LYCET_operations.py  test_node_reverse_mode.py
